--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Aplicación</title>
+    <link rel="icon" href="assets/API.png" type="image/x-icon">
+    <title>Phone Api</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
